# upgraded-soupx

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  results_raw.csv  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/ISSUE_TEMPLATE/workflows/: docs.yml  (+1 more)
.github/workflows/: docs.yml  tests.yml
SoupX/: __init__.py  correction.py  decontx.py  doublet.py  downstream.py  estimate_soup.py  estimation.py  gene_het.py  io.py  iterative.py  markers.py  metrics.py  plot.py  set_properties.py  soup_channel.py  utils.py
assets/css/: styles.9d06438a.css
assets/js/: 06ec344e.5ec3dd38.js  0e384e19.261954e9.js  17896441.75666c50.js  2fe8ab9d.60fa4293.js  3e7f9031.c153a980.js  4421ac88.2be24594.js  457.11e73dea.js  4d54d076.c7d382f8.js  4f530648.773034ac.js  54f44165.6336c546.js  628c5aac.729135f8.js  62a6a633.35f24afb.js  6547014a.4387328c.js  84d9bd97.fc4e8649.js  85a8bdd8.238468c6.js  9b97962c.0f3bc361.js  9beb87c2.6c6c8c34.js  a39cda6e.2394825b.js  c4f5d8e4.f5b1c024.js  c5dc95d3.1345b4da.js  d9ce576b.8ac2706d.js  f3c4c4e8.26ccaad1.js  fbd7a87c.eda3269c.js  fc942884.eab570ca.js  main.2e592604.js  runtime~main.753574b7.js
benchmarks/: __init__.py  benchmark.py  benchmark_full.py  compare.py  convert_results_csv.py  export_rep1_zenodo_gt.py  plot_results.py  rep1_zenodo_utils.py  validate_fetal_liver.py  validate_hgmm.py
docs/: datasets.md  index.html  index.md
docs/api/: correction.md  estimation.md  io.md  metrics.md  soup-channel.md
docs/changelog/: index.html
docs/contributing/: index.html
docs/datasets/: index.html
docs/getting-started/: installation.md  quickstart.md
docs/results/: index.html
docs/user-guide/: automatic.md  decontx.md  doublets.md  downstream.md  gene-het.md  iterative.md  manual.md  visualization.md
plots/: auto_est_detail.drawio  decontx_detail.drawio  doublet_detail.drawio  genehet_detail.drawio  generate_drawio.py  generate_upg_auto_drawio.py  iterative_detail.drawio  pipeline_diagram.drawio
tests/: conftest.py  regression_golden.json  test_assessment_metrics.py  test_benchmark_full_rep1_zenodo_gt.py  test_core.py  test_correction.py  test_decontx.py  test_downstream.py  test_edge_cases.py  test_estimate_soup.py  test_estimation.py  test_io.py  test_markers.py  test_plot.py  test_regression.py  test_rep1_zenodo_utils.py  test_utils.py  test_validate_hgmm.py
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: changelog.md  contributing.md  datasets.md  intro.md  results.md
(+33 files in other folders)
