[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soupx"
version = "1.6.0"
description = "Ambient RNA contamination removal for droplet scRNA-seq — Python port of R SoupX"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "statsmodels>=0.13",
    "matplotlib>=3.4",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
downstream = [
    "scikit-learn>=1.0",
    "umap-learn>=0.5",
    "leidenalg>=0.9",
    "python-igraph>=0.10",
]
h5 = ["h5py>=3.0"]
anndata = ["anndata>=0.9"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["SoupX"]

[tool.pytest.ini_options]
testpaths = ["tests"]
