[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upgraded-soupx"
version = "1.7.0"
description = "Ambient RNA contamination removal for droplet scRNA-seq - Python port and extension of R SoupX"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Israt Jahan Khan", email = "isratjahankhanijk@gmail.com" },
]
keywords = [
    "single-cell RNA-seq",
    "ambient RNA",
    "decontamination",
    "SoupX",
    "DecontX",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "statsmodels>=0.13",
    "matplotlib>=3.4",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://isratijk.github.io/Upgraded-soupX/"
Repository = "https://github.com/IsratIJK/Upgraded-soupX"
Documentation = "https://isratijk.github.io/Upgraded-soupX/"
"Bug Tracker" = "https://github.com/IsratIJK/Upgraded-soupX/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
downstream = [
    "scikit-learn>=1.0",
    "umap-learn>=0.5",
    "leidenalg>=0.9",
    "python-igraph>=0.10",
]
h5 = ["h5py>=3.0"]
anndata = ["anndata>=0.9"]

[tool.hatch.build.targets.wheel]
packages = ["SoupX"]

[tool.pytest.ini_options]
testpaths = ["tests"]
